<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="assets_authority">fr.pokedex.assets</string>
    <string name="search_authority">fr.pokedex.SearchContentProvider</string>
    
    <string name="app_name">Pokedex Fr</string>
    <string name="search_title">Recherche</string>
    <string name="search_hint">Chercher Pokemon ou numéro</string>
    <string name="icon">Icone de Pokemon</string>
    <string name="expand">Elargir</string>
    <string name="type">Type</string>
    
    <string name="life">Vie</string>
    <string name="att">Attaque</string>
    <string name="def">Defense</string>
    <string name="spatt">Sp Attaque</string>
    <string name="spdef">Sp Defense</string>
    <string name="speed">Vitesse</string>
    
    <string name="evolution_chain">Chaine d\'évolution</string>
    <string name="info_title">Détails</string>
    
    <string name="size">Taille :</string>
    <string name="weight">Poids :</string>
    <string name="ev">EV :</string>
    <string name="catch_rate">Taux de capture :</string>
    <string name="gender">Sexe :</string>
    <string name="hatch">Eclosion :</string>
    <string name="egg_group">Groupe oeuf :</string>

    <string name="acier">acier</string>
    <string name="combat">combat</string>
    <string name="dragon">dragon</string>
    <string name="eau">eau</string>
    <string name="electrique">electrique</string>
    <string name="fee">fee</string>
    <string name="feu">feu</string>
    <string name="glace">glace</string>
    <string name="insecte">insecte</string>
    <string name="normal">normal</string>
    <string name="plante">plante</string>
    <string name="poison">poison</string>
    <string name="psy">psy</string>
    <string name="roche">roche</string>
    <string name="sol">sol</string>
    <string name="spectre">spectre</string>
    <string name="tenebre">tenebre</string>
    <string name="vol">vol</string>
    
    <string name="loading_error">Il y a eu une erreur lors du chargement de ce Pokémon.</string>
    <string name="no_result">Il n\'existe pas de Pokémon avec ce nom ou ce numéro.</string>
</resources>
