<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">
    
    <ImageView android:id="@+id/expand"
        android:contentDescription="@string/expand"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:src="@drawable/expand_arrow" />
    
    <LinearLayout android:id="@+id/info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/info_title"
            android:layout_marginBottom="15dp" />
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
            
            <TableRow>
                
                <TextView android:text="@string/size"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/size_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
            <TableRow
                android:layout_marginTop="5dp">
                
                <TextView android:text="@string/weight"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/weight_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
            <TableRow
                android:layout_marginTop="5dp">
                
                <TextView android:text="@string/ev"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/ev_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
            <TableRow
                android:layout_marginTop="5dp">
                
                <TextView android:text="@string/catch_rate"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/catch_rate_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
            <TableRow
                android:layout_marginTop="5dp">
                
                <TextView android:text="@string/gender"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/gender_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
            <TableRow
                android:layout_marginTop="5dp">
                
                <TextView android:text="@string/hatch"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/hatch_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
            <TableRow
                android:layout_marginTop="5dp">
                
                <TextView android:text="@string/egg_group"
                    android:textSize="15sp" />
                
                <TextView android:id="@+id/egg_group_txt"
                    android:textSize="15sp"
                    android:paddingLeft="10dp" />
                
            </TableRow>
            
        </TableLayout>
        
        <LinearLayout android:id="@+id/full_evolutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />
    </LinearLayout>
</LinearLayout>
