<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp">
    
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/att"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spatt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spdef"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lifeTxt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attTxt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defTxt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spaTxt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spdTxt"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedTxt"/>
    
    </LinearLayout>
    
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">
        
        <View
            android:id="@+id/drawLife"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="2dp" />
        
        <View
            android:id="@+id/drawAtt"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="2dp" />
        
        <View
            android:id="@+id/drawDef"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="2dp" />
        
        <View
            android:id="@+id/drawSpa"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="2dp" />
        
        <View
            android:id="@+id/drawSpd"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="2dp" />
        
        <View
            android:id="@+id/drawSpeed"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="2dp" />
    
    </LinearLayout>
</LinearLayout>
